# GameOfLife

./: .gitignore  README.md  configwindow.py  gameoflife.py  gamewindow.py  grid.py  helpwindow.py  pyproject.toml  requirements-dev.txt  requirements.txt  world.py
.github/workflows/: dependabot_autolabel.yml
docs/source/: conf.py  configwindow.rst  gameoflife.rst  gamewindow.rst  index.rst  modules.rst
saved_states/: explosion.stt  glider.stt  gosperglidergun.stt
