[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "GameOfLife"
version = "0.1"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "matplotlib",
    "PyQt6",
    "PyQt6-WebEngine",
    "sphinx"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-docstrings",
    "isort",
    "mypy",
    "pip-tools",
    "pre-commit",
]

